--- a/index.html
+++ b/index.html
@@ -1,87 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <Link rel="stylesheet" href="style.css">
+    </Link>
 </head>
+
 <body>
-
-  Social Media Dashboard
-  Total Followers: 23,004
-
-  Dark Mode
-
-  
-
-  @nathanf
-  1987
-  Followers
-  12 Today
-
-  @nathanf
-  1044
-  Followers
-  99 Today
-
-  @realnathanf
-  11k
-  Followers
-  1099 Today
-
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
-
-
-
-  Overview - Today
-
-  Page Views
-  87
-  3%
-
-  Likes
-  52
-  2%
-
-  Likes
-  5462
-  2257%
-
-  Profile Views
-  52k
-  1375%
-
-  Retweets
-  117
-  303%
-
-  Likes
-  507
-  553%
-
-  Likes
-  107
-  19%
-
-  Total Views
-  1407
-  12%
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <div class="container">
+        <div class="content">
+            <div class="header-container">
+                <div class="header">
+                    <h1>Social Media Dashboard</h1>
+                    <p>Total Followers: 23,004</p>
+                </div>
+                <div class="toggle">
+                    <p>Dark Mode</p>
+                    <label class="switch">
+                        <input type="checkbox" id="theme-toggle-button">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="dashboard-container">
+                <!-- facebook container -->
+                <div class="card">
+                    <div class="card-header">
+                        <img src="images/icon-facebook.svg" alt="facebook">
+                        <p>@nathanf</p>
+                    </div>
+                    <p class="year">1987</p>
+                    <p>Followers</p>
+                    <p class="icon-up"><img src="images/icon-up.svg" alt="up">12 Today</p>
+                </div>
+                <!-- facebook container -->
+                <div class="card">
+                    <div class="card-header">
+                        <img src="images/icon-twitter.svg" alt="twitter">
+                        <p>@nathanf</p>
+                    </div>
+                    <p class="year">1044</p>
+                    <p>Followers</p>
+                    <p class="icon-up"><img src="images/icon-up.svg" alt="up">12 Today</p>
+                </div>
+                <!-- facebook container -->
+                <div class="card">
+                    <div class="card-header">
+                        <img src="images/icon-instagram.svg" alt="facebook">
+                        <p>@nathanf</p>
+                    </div>
+                    <p class="year">11k</p>
+                    <p>Followers</p>
+                    <p class="icon-up"><img src="images/icon-up.svg" alt="up">99 Today</p>
+                </div>
+                <!-- facebook container -->
+                <div class="card">
+                    <div class="card-header">
+                        <img src="images/icon-youtube.svg" alt="facebook">
+                        <p>Nathan F.</p>
+                    </div>
+                    <p class="year">82</39p>
+                    <p>Subscribers</p>
+                    <p class="icon-down"><img src="images/icon-down.svg" alt="up">1099 Today</p>
+                </div>
+            </div>
+            <div class="overview-content">
+                <!-- overview container -->
+                <div>
+                    <h2>Overview - Today</h2>
+                </div>
+                <!-- facebook overview container -->
+                <div class="overview-container">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-header-top">
+                                <p>Page Views</p>
+                                <img src="images/icon-facebook.svg" alt="facebook">
+                            </div>
+                            <div class="card-header-bottom">
+                                <p>87</p>
+                                <p class="icon-up"><img src="images/icon-up.svg" alt="up">3% </p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- facebook overview container -->
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-header-top">
+                                <p>Page Views</p>
+                                <img src="images/icon-facebook.svg" alt="facebook">
+                            </div>
+                            <div class="card-header-bottom">
+                                <p>52</p>
+                                <p class="icon-down"><img src="images/icon-down.svg" alt="up">2% </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-header-top">
+                                <p>Likes</p>
+                                <img src="images/icon-instagram.svg" alt="facebook">
+                            </div>
+                            <div class="card-header-bottom">
+                                <p>5462</p>
+                                <p class="icon-up"><img src="images/icon-up.svg" alt="up">2257% </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-header-top">
+                                <p>Profile Views</p>
+                                <img src="images/icon-instagram.svg" alt="facebook">
+                            </div>
+                            <div class="card-header-bottom">
+                                <p>52k</p>
+                                <p class="icon-up"><img src="images/icon-up.svg" alt="up">1375% </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-header-top">
+                                <p>Page Views</p>
+                                <img src="images/icon-twitter.svg" alt="twitter">
+                            </div>
+                            <div class="card-header-bottom">
+                                <p>117</p>
+                                <p class="icon-up"><img src="images/icon-up.svg" alt="up">303% </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-header-top">
+                                <p>Page Views</p>
+                                <img src="images/icon-twitter.svg" alt="twitter">
+                            </div>
+                            <div class="card-header-bottom">
+                                <p>87</p>
+                                <p class="icon-up"><img src="images/icon-up.svg" alt="up">3% </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-header-top">
+                                <p>Page Views</p>
+                                <img src="images/icon-youtube.svg" alt="youtube">
+                            </div>
+                            <div class="card-header-bottom">
+                                <p>87</p>
+                                <p class="icon-down"><img src="images/icon-down.svg" alt="up">19% </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-header-top">
+                                <p>Page Views</p>
+                                <img src="images/icon-youtube.svg" alt="youtube">
+                            </div>
+                            <div class="card-header-bottom">
+                                <p>87</p>
+                                <p class="icon-down"><img src="images/icon-down.svg" alt="up">12% </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <button id="theme-toggle-button">Toggle Theme</button> -->
+    <script src="script.js"></script>
 </body>
+
 </html>
