--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@
                     <h1>Social Media Dashboard</h1>
                     <p>Total Followers: 23,004</p>
                 </div>
-                <div class="toggle">
+                <!-- <div class="toggle">
                     <p>Dark Mode</p>
                     <label class="switch">
                         <input type="checkbox" id="theme-toggle-button">
                         <span class="slider round"></span>
                     </label>
-                </div>
+                </div> -->
+                <div class="color-toggle">
+                    <p class="toggle">Dark Mode</p>
+                    <label class="switch">
+                      <input id="theme-toggle-button" class="dark-mode" type="checkbox" unchecked>
+                      <span class="slider round"></span>
+                    </label>
+                  </div>
             </div>
             <div class="dashboard-container">
                 <!-- facebook container -->
